add xdebug, redis

--- a/services/nginx/conf.d/app.conf
+++ b/services/nginx/conf.d/app.conf
@@ -1,3 +1,11 @@
+upstream fastcgi_phpfpm1 {
+    server app:9000;
+}
+
+upstream fastcgi_phpfpm2 {
+    server app_debug:9000;
+}
+
 server {
     listen 80;
     index index.php index.html;
@@ -5,9 +13,15 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/application/public;
     location ~ \.php$ {
+        set $PHP_SERVER fastcgi_phpfpm1;
+        if ($http_cookie ~* "XDEBUG_SESSION") {
+            set $PHP_SERVER fastcgi_phpfpm2;
+        }
+        
+
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass $PHP_SERVER;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
