--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.8'
-
 services:
   app:
     build:
       context: .
       dockerfile: ./services/php/Dockerfile
-    image: php:8.1
+    image: php:8.2
     container_name: app
     restart: unless-stopped
     tty: true
@@ -16,6 +14,25 @@ services:
     volumes:
       - ./application:/var/www/application
       - ./services/php/config/local.ini:/usr/local/etc/php/conf.d/local.ini
+    hostname: app
+    networks:
+      - app-network
+  app_debug:
+    build:
+      context: .
+      dockerfile: ./services/php/debug/Dockerfile
+    image: php:8.2
+    container_name: app_debug
+    restart: unless-stopped
+    tty: true
+    environment:
+      SERVICE_NAME: app_debug
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./application:/var/www/application
+      - ./services/php/config/local.ini:/usr/local/etc/php/conf.d/local.ini
+    hostname: app_debug
     networks:
       - app-network
   webserver:
@@ -24,8 +41,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "80:80"
-      - "443:443"
+      - "8000:80"
     volumes:
       - ./application:/var/www/application
       - ./services/nginx/conf.d:/etc/nginx/conf.d
@@ -37,7 +53,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "3306:3306"
+      - "33060:3306"
     environment:
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
@@ -50,8 +66,21 @@ services:
     hostname: db
     networks:
       - app-network
+  redis:
+    image: redis:latest
+    container_name: redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+    hostname: redis
+    networks:
+      - app-network
 volumes:
   mysql_data:
+  redis_data:
 networks:
   app-network:
     driver: bridge
