--- a/services/php/debug/Dockerfile
+++ b/services/php/debug/Dockerfile
@@ -24,8 +24,17 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Устанавливаем расширения PHP
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl gd bcmath soap \
-    && pecl install pdo_sqlsrv-5.10.1 \
-    && docker-php-ext-enable pdo_sqlsrv
+    && pecl install pdo_sqlsrv-5.10.1 xdebug \
+    && docker-php-ext-enable pdo_sqlsrv xdebug
+
+RUN echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.mode=develop,coverage,debug,profile" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.idekey=docker" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.log=/dev/stdout" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.log_level=0" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.discover_client_host=1" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.client_port=9003" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.client_host=10.255.255.254" >> /usr/local/etc/php/conf.d/xdebug.ini
 
 # Загружаем актуальную версию Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -35,7 +44,7 @@ RUN useradd -u 1000 -ms /bin/bash -g www www && \
     mkdir /var/www/application && \
     chown www:www /var/www/application
 # # Копируем содержимое текущего каталога в рабочую директорию
-# COPY --chown=www:www application /var/www/application
+
 # # Меняем пользователя на www
 USER www
 
