--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,23 +45,18 @@ services:
       - ./services/nginx/conf.d:/etc/nginx/conf.d
     networks:
       - app-network
-  db:
-    image: mysql:8
-    container_name: db
-    restart: unless-stopped
-    tty: true
-    ports:
-      - "33060:3306"
+  postgres:
+    image: postgres:14.1-alpine
+    container_name: postgres
+    restart: always
     environment:
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: 123456
-      MYSQL_ROOT_PASSWORD: 123456
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '54321:5432'
     volumes:
-      - mysql_data:/var/lib/mysql
-    hostname: db
+      - postgres_data:/var/lib/postgresql/data
+    hostname: postgres
     networks:
       - app-network
   redis:
@@ -77,7 +72,7 @@ services:
     networks:
       - app-network
 volumes:
-  mysql_data:
+  postgres_data:
   redis_data:
 networks:
   app-network:
