remove mysql configs, add default database for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     container_name: postgres
     restart: always
     environment:
+      - POSTGRES_DB=laravel
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
