--- a/services/php/Dockerfile
+++ b/services/php/Dockerfile
@@ -1,5 +1,17 @@
 FROM php:8.2-fpm
 
+ENV ACCEPT_EULA=Y
+
+RUN apt-get update && apt-get install -y gnupg2
+
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list \
+    && echo "Package: unixodbc\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
+    && echo "Package: unixodbc-dev\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
+    && echo "Package: libodbc1:amd64\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
+    && echo "Package: odbcinst\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
+    && echo "Package: odbcinst1debian2:amd64\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft
+
 # Устанавливаем зависимости
 RUN apt-get update && apt-get install -y \
     build-essential \
@@ -19,13 +31,15 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libxml2-dev \
     unixodbc-dev \
-    npm
+    unixodbc \
+    npm msodbcsql18 mssql-tools18
+
 # Очищаем кэш
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Устанавливаем расширения PHP
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl gd bcmath soap \
-    && pecl install pdo_sqlsrv-5.10.1 \
-    && docker-php-ext-enable pdo_sqlsrv
+    && pecl install sqlsrv pdo_sqlsrv \
+    && docker-php-ext-enable sqlsrv pdo_sqlsrv
 
 # Загружаем актуальную версию Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -34,8 +48,7 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www && \ 
     mkdir /var/www/application && \
     chown www:www /var/www/application
-# # Копируем содержимое текущего каталога в рабочую директорию
-# COPY --chown=www:www application /var/www/application
+
 # # Меняем пользователя на www
 USER www
 
