--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ services:
   app:
     build:
       dockerfile: ./services/php/Dockerfile
-    container_name: app
     restart: unless-stopped
     tty: true
     environment:
-      SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
     volumes:
@@ -19,7 +17,6 @@ services:
     build:
       context: ./services/php/debug
       dockerfile: Dockerfile
-    container_name: app_debug
     restart: unless-stopped
     tty: true
     environment:
@@ -35,11 +32,10 @@ services:
       - app-network
   webserver:
     image: nginx:alpine
-    container_name: webserver
     restart: unless-stopped
     tty: true
     ports:
-      - "8000:80"
+      - "${WEB_PORT}:80"
     volumes:
       - ./application:/var/www/application
       - ./services/nginx/conf.d:/etc/nginx/conf.d
@@ -47,18 +43,17 @@ services:
       - app-network
   db:
     image: mysql:8
-    container_name: db
     restart: unless-stopped
     tty: true
     ports:
-      - "33060:3306"
+      - "${DB_PORT}:3306"
     environment:
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
-      MYSQL_PASSWORD: 123456
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${ROOT_DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     hostname: db
@@ -66,13 +61,12 @@ services:
       - app-network
   redis:
     image: redis:latest
-    container_name: redis
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - redis_data:/data
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT}:6379"
     hostname: redis
     networks:
       - app-network
