added makefile changed working_dir

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     tty: true
     environment:
       SERVICE_TAGS: dev
-    working_dir: /var/www
+    working_dir: /var/www/application
     volumes:
       - ./application:/var/www/application
       - ./services/php/config/local.ini:/usr/local/etc/php/conf.d/local.ini
@@ -22,7 +22,7 @@ services:
     environment:
       SERVICE_NAME: app_debug
       SERVICE_TAGS: dev
-    working_dir: /var/www
+    working_dir: /var/www/application
     volumes:
       - ./application:/var/www/application
       - ./services/php/config/local.ini:/usr/local/etc/php/conf.d/local.ini
